suspend-client has used -t for the client target (like everything else) for ages, fix the usage string and man page and trim some leftover code.

--- a/tmux.1
+++ b/tmux.1
@@ -657,7 +657,7 @@ Start the
 .Nm
 server, if not already running, without creating any sessions.
 .It Xo Ic suspend-client
-.Op Fl c Ar target-client
+.Op Fl t Ar target-client
 .Xc
 .D1 (alias: Ic suspendc )
 Suspend a client by sending
