Accept colours of the hex form #ffffff and translate to the nearest from the xterm(1) 256-colour set.

--- a/tmux.1
+++ b/tmux.1
@@ -1793,8 +1793,11 @@ is one of:
 .Ic colour0
 to
 .Ic colour255
-from the 256-colour palette, or
-.Ic default .
+from the 256-colour set,
+.Ic default ,
+or a hexadecimal RGB string such as
+.Ql #ffffff ,
+which chooses the closest match from the default 256-colour set.
 .It Ic message-fg Ar colour
 Set status line message foreground colour.
 .It Ic message-limit Ar number
