--- a/tmux.1
+++ b/tmux.1
@@ -1628,16 +1628,20 @@ Available server options are:
 Set the number of buffers; as new buffers are added to the top of the stack,
 old ones are removed from the bottom if necessary to maintain this maximum
 length.
-.It Ic escape-time
+.It Ic escape-time Ar time
 Set the time in milliseconds for which
 .Nm
 waits after an escape is input to determine if it is part of a function or meta
 key sequences.
 The default is 500 milliseconds.
-.It Ic exit-unattached
+.It Xo Ic exit-unattached
+.Op Ic on | off
+.Xc
 If enabled, the server will exit when there are no attached clients, rather
 than when there are no attached sessions.
-.It Ic quiet
+.It Xo Ic quiet
+.Op Ic on | off
+.Xc
 Enable or disable the display of various informational messages (see also the
 .Fl q
 command line flag).
@@ -1705,10 +1709,14 @@ to work correctly, this
 be set to
 .Ql screen
 or a derivative of it.
-.It Ic destroy-unattached
+.It Xo Ic destroy-unattached
+.Op Ic on | off
+.Xc
 If enabled and the session is no longer attached to any clients, it is
 destroyed.
-.It Ic detach-on-destroy
+.It Xo Ic detach-on-destroy
+.Op Ic on | off
+.Xc
 If on (the default), the client is detached when the session it is attached to
 is destroyed.
 If off, the client is switched to the most recently active of the remaining
