Remove a bit of text that makes exit-unattached description unclear.

--- a/tmux.1
+++ b/tmux.1
@@ -1637,8 +1637,7 @@ The default is 500 milliseconds.
 .It Xo Ic exit-unattached
 .Op Ic on | off
 .Xc
-If enabled, the server will exit when there are no attached clients, rather
-than when there are no attached sessions.
+If enabled, the server will exit when there are no attached clients.
 .It Xo Ic quiet
 .Op Ic on | off
 .Xc
