Clarify alternate-screen description a little.

--- a/tmux.1
+++ b/tmux.1
@@ -2153,8 +2153,11 @@ may use the terminal alternate screen feature, which allows the
 and
 .Em rmcup
 .Xr terminfo 5
-capabilities to be issued to preserve the existing window content on start and
-restore it on exit.
+capabilities.
+The alternate screen feature preserves the contents of the window when an
+interactive application starts and restores it on exit, so that any output
+visible before the application starts reappears unchanged after it exits.
+The default is on.
 .Pp
 .It Xo Ic automatic-rename
 .Op Ic on | off
