--- a/TODO
+++ b/TODO
@@ -122,3 +122,4 @@
 - add general internal format for lists (key=value) and a way to output them in
   different representations, use for list-windows, etc etc. see message id
   20110221205346.GA1580@yelena.nicm.ath.cx
+- numeric prefix in copy mode should be paste buffer for C-w
