Add a flag to cmd_find_session so that attach-session can prefer unattached sessions when choosing the most recently used (if -t is not given). Suggested by claudio@.

--- a/tmux.1
+++ b/tmux.1
@@ -562,6 +562,17 @@ If no server is started,
 .Ic attach-session
 will attempt to start it; this will fail unless sessions are created in the
 configuration file.
+.Pp
+The
+.Ar target-session
+rules for
+.Ic attach-session
+are slightly adjusted: if
+.Nm
+needs to select the most recently used session, it will prefer the most
+recently used
+.Em unattached
+session.
 .It Xo Ic detach-client
 .Op Fl P
 .Op Fl t Ar target-client
