--- a/tmux.1
+++ b/tmux.1
@@ -598,9 +598,11 @@ server and clients and destroy all sessions.
 .It Ic kill-session Op Fl t Ar target-session
 Destroy the given session, closing any windows linked to it and no other
 sessions, and detaching all clients attached to it.
-.It Ic list-clients
+.It Ic list-clients Op Fl t Ar target-session
 .D1 (alias: Ic lsc )
-List all clients attached to the server.
+List all clients attached to the server. If 
+.Ar target-session
+is specified, list only clients connected to that session.
 .It Ic list-commands
 .D1 (alias: Ic lscm )
 List the syntax of all commands supported by
