--- a/tmux.1
+++ b/tmux.1
@@ -600,7 +600,8 @@ Destroy the given session, closing any windows linked to it and no other
 sessions, and detaching all clients attached to it.
 .It Ic list-clients Op Fl t Ar target-session
 .D1 (alias: Ic lsc )
-List all clients attached to the server. If 
+List all clients attached to the server.
+If
 .Ar target-session
 is specified, list only clients connected to that session.
 .It Ic list-commands
