Add an option (mouse-select-window) which allows the mouse to be used by clicking on the status line, written by hsim at gmx dot li.

--- a/tmux.1
+++ b/tmux.1
@@ -1896,6 +1896,11 @@ If on,
 captures the mouse and when a window is split into multiple panes the mouse may
 be used to select the current pane.
 The mouse click is also passed through to the application as normal.
+.It Xo Ic mouse-select-window
+.Op Ic on | off
+.Xc
+If on, clicking the mouse on a window name in the status line will select that
+window.
 .It Ic pane-active-border-bg Ar colour
 .It Ic pane-active-border-fg Ar colour
 Set the pane border colour for the currently active pane.
