When mode-mouse is on (it is off by default), automatically enter copy mode when the mouse is dragged or the mouse wheel is used. Also exit copy mode when the mouse wheel is scrolled off the bottom. Discussed with and written by hsim at gmx dot li.

--- a/tmux.1
+++ b/tmux.1
@@ -2310,8 +2310,9 @@ contains
 .Op Ic on | off
 .Xc
 Mouse state in modes.
-If on, the mouse may be used to copy a selection by dragging in copy mode, or
-to select an option in choice mode.
+If on, the mouse may be used to enter copy mode and copy a selection by
+dragging, to enter copy mode and scroll with the mouse wheel, or to select an
+option in choice mode.
 .Pp
 .It Xo Ic monitor-activity
 .Op Ic on | off
