--- a/tmux.1
+++ b/tmux.1
@@ -1888,6 +1888,12 @@ Set status line message foreground colour.
 Set the number of error or information messages to save in the message log for
 each client.
 The default is 20.
+.It Xo Ic mouse-resize-pane
+.Op Ic on | off
+.Xc
+If on,
+.Nm
+captures the mouse and allows panes to be resized by dragging on their borders.
 .It Xo Ic mouse-select-pane
 .Op Ic on | off
 .Xc
