--- a/TODO
+++ b/TODO
@@ -131,3 +131,4 @@
   build tree of combined characters/non-BMP (LRU dropped when full)
 - entry in FAQ about what to do when someone does mkdir /tmp/tmux-1000
 - show size under pane number in display-panes mode
+- command-prompt should be passed through status_replace
