--- a/TODO
+++ b/TODO
@@ -137,3 +137,5 @@
 - maybe a way to put pane names instead of window names in status line
 - when client is locked data still appears to be buffered for it (it shouldn't
   be) so a load is sent after unlock. this is bad, needs fixed. SF 3297114
+- respawn-window doesn't fix it if the terminal is stuck waiting for end of
+  OSC DCS etc
