--- a/TODO
+++ b/TODO
@@ -139,3 +139,7 @@
   be) so a load is sent after unlock. this is bad, needs fixed. SF 3297114
 - respawn-window doesn't fix it if the terminal is stuck waiting for end of
   OSC DCS etc
+
+** We need a tmux terminfo entry to document the extensions we are using in
+   upstream terminfo. Must NOT change (only add or remove) anything from
+   TERM=screen so we can fallback!
