Support DECSCUSR sequence to set the cursor style with two new terminfo(5) extensions, Cs and Csr. Written by Ailin Nemui.

--- a/tmux.1
+++ b/tmux.1
@@ -2832,6 +2832,19 @@ See the
 option above and the
 .Xr xterm 1
 man page.
+.It Em Cs, Csr
+Change the cursor style.
+If set allows a sequence such as:
+.Bd -literal -offset indent
+$ printf '\e033[4 q'
+.Ed
+.Pp
+To change the cursor to an underline.
+If
+.Em Csr
+is set, it will be used to reset the cursor style instead
+of
+.Em Cs .
 .It Em Cc, Cr
 The first takes one string argument and is used to set the cursor colour;
 the second takes no arguments and restores the default cursor colour.
