Pass prompts through status_replace so that they can be more helpful (such as showing the previous session name when renaming). From Tiago Cunha.

--- a/tmux.1
+++ b/tmux.1
@@ -1255,7 +1255,7 @@ The
 .Ar shell-command
 string may contain the special character sequences supported by the
 .Ic status-left
-command.
+option.
 If no
 .Ar shell-command
 is given, the current pipe (if any) is closed.
@@ -2624,6 +2624,7 @@ Open the command prompt in a client.
 This may be used from inside
 .Nm
 to execute commands interactively.
+.Pp
 If
 .Ar template
 is specified, it is used as the command.
@@ -2637,6 +2638,12 @@ a single prompt is displayed, constructed from
 if it is present, or
 .Ql \&:
 if not.
+The
+.Ar prompts
+may contain the special character sequences supported by the
+.Ic status-left
+option.
+.Pp
 Before the command is executed, the first occurrence of the string
 .Ql %%
 and all occurrences of
