Someone mentioned this at LinuxTag as well.

--- a/TODO
+++ b/TODO
@@ -139,6 +139,8 @@
   be) so a load is sent after unlock. this is bad, needs fixed. SF 3297114
 - respawn-window doesn't fix it if the terminal is stuck waiting for end of
   OSC DCS etc
+- lsk/show etc should be able to output in a form suitable to put in config
+  file etc
 
 ** We need a tmux terminfo entry to document the extensions we are using in
    upstream terminfo. Must NOT change (only add or remove) anything from
