--- a/TODO
+++ b/TODO
@@ -141,6 +141,9 @@
   OSC DCS etc
 - lsk/show etc should be able to output in a form suitable to put in config
   file etc
+- option to specify initial text in command-prompt buffer (-T or
+  something). can be passed through status_replace so can be used
+  to start off with current window name when renaming
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
   TERM=screen so we can fallback!
