Fix a typo, spotted by Michal Mazurek..

--- a/tmux.1
+++ b/tmux.1
@@ -2831,7 +2831,7 @@ understands some extensions to
 .Xr terminfo 5 :
 .Bl -tag -width Ds
 .It Em Cc , Cr
-Set the cursor color.
+Set the cursor colour.
 The first takes a single string argument and is used to set the colour;
 the second takes no arguments and restores the default cursor colour.
 If set, a sequence such as this may be used
