--- a/TODO
+++ b/TODO
@@ -144,6 +144,7 @@
 - option to specify initial text in command-prompt buffer (-T or
   something). can be passed through status_replace so can be used
   to start off with current window name when renaming
+- Support for borderless panes
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
   TERM=screen so we can fallback!
