--- a/TODO
+++ b/TODO
@@ -145,6 +145,11 @@
   something). can be passed through status_replace so can be used
   to start off with current window name when renaming
 - Support for borderless panes
+- run-shell/if-shell should support status_replace stuff
+- custom prompts for confirm-before
+- wait-pane command or another way to make it synchronous/wait for command to
+  finish
+- way to get command window started with (part of format stuff?)
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
   TERM=screen so we can fallback!
