--- a/TODO
+++ b/TODO
@@ -139,8 +139,6 @@
   be) so a load is sent after unlock. this is bad, needs fixed. SF 3297114
 - respawn-window doesn't fix it if the terminal is stuck waiting for end of
   OSC DCS etc
-- lsk/show etc should be able to output in a form suitable to put in config
-  file etc
 - option to specify initial text in command-prompt buffer (-T or
   something). can be passed through status_replace so can be used
   to start off with current window name when renaming
@@ -149,7 +147,7 @@
 - custom prompts for confirm-before
 - wait-pane command or another way to make it synchronous/wait for command to
   finish
-- way to get command window started with (part of format stuff?)
+- way to get command window was started with (part of format stuff?)
 - last-pane across sessions
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
