Include the existing window and session name in the prompt when renaming and add a new key binding ($) for rename session. From Tiago Cunha.

--- a/tmux.1
+++ b/tmux.1
@@ -233,6 +233,8 @@ Break the current pane out of the window.
 Split the current pane into two, top and bottom.
 .It #
 List all paste buffers.
+.It $
+Rename the current session.
 .It %
 Split the current pane into two, left and right.
 .It &
