--- a/tmux.1
+++ b/tmux.1
@@ -2690,12 +2690,23 @@ to
 .Ql %9
 .Pc .
 .It Xo Ic confirm-before
+.Op Fl p Ar prompt
 .Op Fl t Ar target-client
 .Ar command
 .Xc
 .D1 (alias: Ic confirm )
 Ask for confirmation before executing
 .Ar command .
+If
+.Fl p
+is given,
+.Ar prompt
+is the prompt to display; otherwise a prompt is constructed from
+.Ar command .
+It may contain the special character sequences supported by the
+.Ic status-left
+option.
+.Pp
 This command works only from inside
 .Nm .
 .It Xo Ic display-message
