--- a/tmux.1
+++ b/tmux.1
@@ -14,7 +14,7 @@
 .\" IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING
 .\" OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: July 3 2011 $
+.Dd $Mdocdate: July 8 2011 $
 .Dt TMUX 1
 .Os
 .Sh NAME
@@ -2694,12 +2694,23 @@ to
 .Ql %9
 .Pc .
 .It Xo Ic confirm-before
+.Op Fl p Ar prompt
 .Op Fl t Ar target-client
 .Ar command
 .Xc
 .D1 (alias: Ic confirm )
 Ask for confirmation before executing
 .Ar command .
+If
+.Fl p
+is given,
+.Ar prompt
+is the prompt to display; otherwise a prompt is constructed from
+.Ar command .
+It may contain the special character sequences supported by the
+.Ic status-left
+option.
+.Pp
 This command works only from inside
 .Nm .
 .It Xo Ic display-message
