fix error in previous;

--- a/tmux.1
+++ b/tmux.1
@@ -2365,8 +2365,7 @@ If on, the mouse may be used to enter copy mode and copy a selection by
 dragging, to enter copy mode and scroll with the mouse wheel, or to select an
 option in choice mode.
 If set to
-.Em
-copy-mode ,
+.Em copy-mode ,
 the mouse behaves as set to on, but cannot be used to enter copy
 mode.
 .Pp
