--- a/tmux.1
+++ b/tmux.1
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $OpenBSD: tmux.1,v 1.239 2011/07/25 09:57:28 nicm Exp $
 .\"
 .\" Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -14,7 +14,7 @@
 .\" IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING
 .\" OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: July 8 2011 $
+.Dd $Mdocdate: July 25 2011 $
 .Dt TMUX 1
 .Os
 .Sh NAME
@@ -1726,6 +1726,22 @@ Available server options are:
 Set the number of buffers; as new buffers are added to the top of the stack,
 old ones are removed from the bottom if necessary to maintain this maximum
 length.
+.It Ic escape-time Ar time
+Set the time in milliseconds for which
+.Nm
+waits after an escape is input to determine if it is part of a function or meta
+key sequences.
+The default is 500 milliseconds.
+.It Xo Ic exit-unattached
+.Op Ic on | off
+.Xc
+If enabled, the server will exit when there are no attached clients.
+.It Xo Ic quiet
+.Op Ic on | off
+.Xc
+Enable or disable the display of various informational messages (see also the
+.Fl q
+command line flag).
 .It Xo Ic set-clipboard
 .Op Ic on | off
 .Xc
@@ -1748,22 +1764,6 @@ disallowedWindowOps: 20,21,SetXprop
 Or changing this property from the
 .Xr xterm 1
 interactive menu when required.
-.It Ic escape-time Ar time
-Set the time in milliseconds for which
-.Nm
-waits after an escape is input to determine if it is part of a function or meta
-key sequences.
-The default is 500 milliseconds.
-.It Xo Ic exit-unattached
-.Op Ic on | off
-.Xc
-If enabled, the server will exit when there are no attached clients.
-.It Xo Ic quiet
-.Op Ic on | off
-.Xc
-Enable or disable the display of various informational messages (see also the
-.Fl q
-command line flag).
 .El
 .Pp
 Available session options are:
@@ -1955,6 +1955,10 @@ The mouse click is also passed through to the application as normal.
 .Xc
 If on, clicking the mouse on a window name in the status line will select that
 window.
+.It Xo Ic mouse-utf8
+.Op Ic on | off
+.Xc
+If enabled, request mouse input as UTF-8 on UTF-8 terminals.
 .It Ic pane-active-border-bg Ar colour
 .It Ic pane-active-border-fg Ar colour
 Set the pane border colour for the currently active pane.
@@ -1978,10 +1982,6 @@ flag to
 Repeat is enabled for the default keys bound to the
 .Ic resize-pane
 command.
-.It Xo Ic mouse-utf8
-.Op Ic on | off
-.Xc
-If enabled, request mouse input as UTF-8 on UTF-8 terminals.
 .It Xo Ic set-remain-on-exit
 .Op Ic on | off
 .Xc
@@ -2434,23 +2434,6 @@ Instructs
 .Nm
 to expect UTF-8 sequences to appear in this window.
 .Pp
-.It Ic window-status-attr Ar attributes
-Set status line attributes for a single window.
-.Pp
-.It Ic window-status-bg Ar colour
-Set status line background colour for a single window.
-.Pp
-.It Ic window-status-fg Ar colour
-Set status line foreground colour for a single window.
-.Pp
-.It Ic window-status-format Ar string
-Set the format in which the window is displayed in the status line window list.
-See the
-.Ar status-left
-option for details of special character sequences available.
-The default is
-.Ql #I:#W#F .
-.Pp
 .It Ic window-status-alert-attr Ar attributes
 Set status line attributes for windows which have an alert (bell, activity
 or content).
@@ -2460,6 +2443,12 @@ Set status line background colour for windows with an alert.
 .Pp
 .It Ic window-status-alert-fg Ar colour
 Set status line foreground colour for windows with an alert.
+.Pp
+.It Ic window-status-attr Ar attributes
+Set status line attributes for a single window.
+.Pp
+.It Ic window-status-bg Ar colour
+Set status line background colour for a single window.
 .Pp
 .It Ic window-status-current-attr Ar attributes
 Set status line attributes for the currently active window.
@@ -2474,6 +2463,17 @@ Set status line foreground colour for the currently active window.
 Like
 .Ar window-status-format ,
 but is the format used when the window is the current window.
+.Pp
+.It Ic window-status-fg Ar colour
+Set status line foreground colour for a single window.
+.Pp
+.It Ic window-status-format Ar string
+Set the format in which the window is displayed in the status line window list.
+See the
+.Ar status-left
+option for details of special character sequences available.
+The default is
+.Ql #I:#W#F .
 .Pp
 .It Ic word-separators Ar string
 Sets the window's conception of what characters are considered word
