--- a/TODO
+++ b/TODO
@@ -141,6 +141,7 @@
 - option to put status line at top (why?)
 - ignore $SHELL if it is not a full path or does not exist
 - panes should have names like windows
+- command-prompt doesn't work if made read-only. why?
 * We need a tmux terminfo entry to document the extensions we are using in
   upstream terminfo. Must NOT change (only add or remove) anything from
   TERM=screen so we can fallback!
