Add a -r flag to switch-client to toggle the client read-only flag. From Johan Commelin.

--- a/tmux.1
+++ b/tmux.1
@@ -558,7 +558,9 @@ is specified, any other clients attached to the session are detached.
 .Fl r
 signifies the client is read-only (only keys bound to the
 .Ic detach-client
-command have any effect)
+or
+.Ic switch-client
+commands have any effect)
 .Pp
 If no server is started,
 .Ic attach-session
@@ -714,7 +716,7 @@ Suspend a client by sending
 .Dv SIGTSTP
 (tty stop).
 .It Xo Ic switch-client
-.Op Fl lnp
+.Op Fl lnpr
 .Op Fl c Ar target-client
 .Op Fl t Ar target-session
 .Xc
@@ -730,6 +732,10 @@ or
 .Fl p
 is used, the client is moved to the last, next or previous session
 respectively.
+.Fl r
+toggles whether a client is read-only (see the
+.Ic attach-session
+command).
 .El
 .Sh WINDOWS AND PANES
 A
