Add pane-base-index option, from Ben Barbour.

--- a/tmux.1
+++ b/tmux.1
@@ -2418,6 +2418,11 @@ but set the width of other panes in the
 .Ic main-vertical
 layout.
 .Pp
+.It Ic pane-base-index Ar index
+Like
+.Ic base-index ,
+but set the starting index for pane numbers.
+.Pp
 .It Xo Ic remain-on-exit
 .Op Ic on | off
 .Xc
